--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>your.package.name</groupId>
 	<artifactId>DiscordBot</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
@@ -28,4 +27,5 @@
 		</dependency>
 	</dependencies>
 
+	<groupId>com.rocketbot.main</groupId>
 </project>
