--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.ocpsoft.prettytime</groupId>
+			<artifactId>prettytime</artifactId>
+			<version>4.0.1.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>org.javacord</groupId>
 			<artifactId>javacord</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
